<resources>
    <string name="app_name">My Profile Information By Armuzz Electro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_now">Sign up Now</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="share_something_useful_for_all">Share Something Useful For All</string>
    <string name="share_mobile_information">Share Mobile Information</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="have_account_login_now">Have Account Login Now</string>
    <string name="or">or</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="logout">Logout</string>
    <string name="armuzz_electro">Armuzz Electro</string>
    <string name="belum_ada_link_yang_ditambahkan">Belum ada link yang ditambahkan</string>
    <string name="your_name">Your Name</string>
    <string name="sudah_verifikasi_lanjut">Sudah Verifikasi, Lanjut</string>
    <string name="kami_telah_mengirim_link_verifikasi_ke_email_kamu_setelah_klik_tekan_tombol_di_bawah">Kami telah mengirim link verifikasi ke email kamu. Setelah klik, tekan tombol di bawah.</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="nama_link">Nama Link</string>
    <string name="url_link">URL Link</string>
    <string name="edit_link">Edit Link</string>
    <string name="batal">Batal</string>
    <string name="hapus_sekarang">Hapus Sekarang</string>
    <string name="konfirmasi_penghapusan">Konfirmasi Penghapusan</string>
    <string name="confirm">Confirm</string>
    <string name="name_link_e_g_whatsapp">Name Link (e.g. WhatsApp)</string>
    <string name="input_link_e_g_https_wa_me">Input Link (e.g. https://wa.me/...)</string>
    <string name="add_new_link">Add New Link</string>
    <string name="search">Search</string>
    <string name="re_send_link_verification">Re-Send Link Verification</string>
    <string name="kembali_ke_welcome">Kembali ke Welcome</string>
    <string name="silakan_cek_email_kamu_dan_klik_link_verifikasi">Silakan cek email kamu dan klik link verifikasi.</string>
    <string name="lihat_password">Lihat Password</string>
    <string name="belum_ada_link">Belum ada link</string>
    <string name="mengunggah_foto_profil">Mengunggah foto profil...</string>
</resources>